# Task_Guardian

./: .gitignore  README.md  pyproject.toml
data/: kalshi-arbitrage-strategy.md  polymarket-arbitrage-research.md  task_guardian.db
src/task_guardian/: cli.py  config.py  executor.py  logging_utils.py  scheduler.py  store.py  task_runner.py
src/task_guardian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/task_guardian/integrations/: executive.py  memory.py
