[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "task-guardian"
version = "0.1.0"
description = "Safe, agent-friendly task scheduler + executor for OpenClaw stacks"
requires-python = ">=3.10"
dependencies = [
  "croniter>=2.0.0"
]

[project.scripts]
tg = "task_guardian.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
